projects now random by default, fixed vertical alignment of tag button

--- a/css/bwa.css
+++ b/css/bwa.css
@@ -12,3 +12,7 @@
   line-height: 55px;
   text-transform: uppercase;
 }
+
+.bwa-btn-group {
+  vertical-align: bottom;
+}
